3. proje son hali

--- a/Blogy.WebUı/Areas/Writer/Views/Blog/MyBlogList.cshtml
+++ b/Blogy.WebUı/Areas/Writer/Views/Blog/MyBlogList.cshtml
@@ -5,17 +5,9 @@
 }
 
 <div class="content-wrapper">
-	<div class="page-header">
-		<h3 class="page-title">Size Ait Bloglar</h3>
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="#">Bloglar</a></li>
-				<li class="breadcrumb-item active" aria-curret="page">Yazar Blogları</li>
-			</ol>
-		</nav>
-	</div>
 
-	<div class="page-header">
+		<h3 class="page-title">Size Ait Bloglar</h3>
+		<nav aria-label="breadcrumb"> </nav>
 
 		<div class="main-panel">
 			<div class="row">
@@ -64,5 +56,5 @@
 			</div>
 		</div>
 	</div>
-</div>
+
 
