--- a/Blogy.WebUı/Views/Shared/Components/_BlogDetailCategoryListComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_BlogDetailCategoryListComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Category>
+﻿@model List<ResultCategoryWithCountDto>
 
 
 
@@ -7,7 +7,7 @@
 	<ul class="categories">
 		@foreach (var item in Model)
 		{
-			<li><a href="#">@item.CategoryName </a></li>
+			<li><a href="#">@item.CategoryName <span>(@item.CategoryCount)</span></a></li>
 		}
 	</ul>
 </div>
