--- a/Blogy.WebUı/Areas/Writer/Views/Shared/Components/_WriterDashboardBlogListComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Areas/Writer/Views/Shared/Components/_WriterDashboardBlogListComponentPartial/Default.cshtml
@@ -22,8 +22,8 @@
 						{
 							<tbody>
 								<tr>
-									<td> #</td>
-									<td><img src="@item.CoverImageUrl" /> </td>
+									<td><a href="/Blog/BlogDetail/@item.ArticleId">@item.ArticleId </a></td>
+									<td> <img src="@item.CoverImageUrl" /> </td>
 									<td>@item.Title</td>
 									<td>@(((DateTime)item.CreatedDate).ToString("dd-MMM-yyyy"))</td>
 									<td>@item.Description.Substring(0, 70)...</td>
