--- a/Blogy.WebUı/Areas/Writer/Views/Shared/Components/_WriterDashboardWeatherComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Areas/Writer/Views/Shared/Components/_WriterDashboardWeatherComponentPartial/Default.cshtml
@@ -4,14 +4,11 @@
             <div class="card-body">
                 <div class="row pt-4">
                     <div class="col-sm-6">
-                        <h1 class="text-white">10:16PM</h1>
-                        <h5 class="text-white">Monday 25 October, 2016</h5>
-                        <h5 class="text-white pt-2 m-0">Precipitation:50%</h5>
-                        <h5 class="text-white m-0">Humidity:23%</h5>
-                        <h5 class="text-white m-0">Wind:13 km/h</h5>
+                        <h1 class="text-white">@DateTime.Now.ToString("HH:mm")</h1>
+                        <h5 class="text-white">@DateTime.Now.ToString("dd/MM/yyyy")</h5>
                     </div>
                     <div class="col-sm-6 text-sm-right pt-3 pt-sm-0">
-                        <h3 class="text-white">Clear Sky</h3>
+                        <h3 class="text-white">Blogy Web Projesi </h3>
                         <p class="text-white m-0">İstanbul</p>
                         <h3 class="text-white m-0">@ViewBag.v5 </h3>
                     </div>
