--- a/Blogy.WebUı/Views/Shared/Components/_BlogDetailCommentComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_BlogDetailCommentComponentPartial/Default.cshtml
@@ -9,11 +9,11 @@
 		{
 			<li class="comment">
 				<div class="vcard">
-					<img src="~/blogy-1.0.0/images/person_1.jpg" alt="Image placeholder">
+					<img src="@item.ImageUrl" alt="Image placeholder">
 				</div>
 				<div class="comment-body">
 					<h3>@item.NameSurname </h3>
-					<div class="meta">@item.CommentDate</div>
+					<div class="meta">@item.CommentDate.ToString("dd-MMM-yyyy")</div>
 					<p>@item.Content</p>
 				</div>
 			</li>
@@ -22,31 +22,6 @@
 
 	</ul>
 	<!-- END comment-list -->
+	@await Component.InvokeAsync("_BlogDetailAddCommentComponentPartial", new { id = ViewBag.i })
 
-	<div class="comment-form-wrap pt-5">
-		<h3 class="mb-5">Leave a comment</h3>
-		<form action="#" class="p-5 bg-light">
-			<div class="form-group">
-				<label for="name">Name *</label>
-				<input type="text" class="form-control" id="name">
-			</div>
-			<div class="form-group">
-				<label for="email">Email *</label>
-				<input type="email" class="form-control" id="email">
-			</div>
-			<div class="form-group">
-				<label for="website">Website</label>
-				<input type="url" class="form-control" id="website">
-			</div>
-
-			<div class="form-group">
-				<label for="message">Message</label>
-				<textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-			</div>
-			<div class="form-group">
-				<input type="submit" value="Post Comment" class="btn btn-primary">
-			</div>
-
-		</form>
-	</div>
 </div>
