--- a/Blogy.WebUı/Views/Shared/Components/_BlogDetailGetOutherBlogPostByWriterComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_BlogDetailGetOutherBlogPostByWriterComponentPartial/Default.cshtml
@@ -1,40 +1,27 @@
-﻿<div class="sidebar-box">
-    <h3 class="heading">Yazarın Diğer Blogları</h3>
+﻿@model List<Article>
+
+<div class="sidebar-box">
+    <h3 class="heading">Yazarın Yazdığı Diğer Blogları</h3>
     <div class="post-entry-sidebar">
         <ul>
-            <li>
-                <a href="">
-                    <img src="~/blogy-1.0.0/images/img_1_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>1 Nisan 2024 Dünya şaka günü</h4>
-                        <div class="post-meta">
-                            <span class="mr-2"> 1 Nisan 2024 </span>
+            @foreach (var item in Model)
+            {
+                <li>
+                    <a href="">
+                        <img src="@item.CoverImageUrl" alt="Image placeholder" class="me-4 rounded" style="height:80px;" width="150px;">
+                        <div class="text">
+                            <h4>@item.Title</h4>
+                            <div class="post-meta">
+                                <span class="mr-2">Yazar İsim Soyisim : @item.AppUser.Name @item.AppUser.Surname
+                                    <br />
+                                    Categorisi : @item.Category.CategoryName </span>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="~/blogy-1.0.0/images/img_2_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                        <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="~/blogy-1.0.0/images/img_3_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                        <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
-                        </div>
-                    </div>
-                </a>
-            </li>
+                    </a>
+                </li>
+            }
+            
+
         </ul>
     </div>
 </div>
