--- a/Blogy.WebUı/Views/Shared/Components/_BlogListNavbarComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_BlogListNavbarComponentPartial/Default.cshtml
@@ -13,11 +13,14 @@
 			<div class="site-navigation">
 				<div class="row g-0 align-items-center">
 					<div class="col-2">
-						<a href="index.html" class="logo m-0 float-start">Blogy<span class="text-primary">.</span></a>
+						<a href="/Blog/BlogList/" class="logo m-0 float-start">Blogy<span class="text-primary">.</span></a>
 					</div>
 					<div class="col-8 text-center">
-						<form action="#" class="search-form d-inline-block d-lg-none">
-							<input type="text" class="form-control" placeholder="Aranacak Kelimeler...">
+
+
+
+						<form asp-action="GetBlogSearchByName" method="get" class="search-form d-inline-block d-lg-none">
+							<input type="submit"   class="form-control" placeholder="Aranacak Kelime..." name="searchString"  value=" @ViewData["CurrentFilter"]" />
 							<span class="bi-search"></span>
 						</form>
 
