--- a/Blogy.WebUı/Views/_ViewImports.cshtml
+++ b/Blogy.WebUı/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Blogy.WebUı.Models
 @using Blogy.WebUI.Models
 @using Blogy.EntityLayer.Concrete
+@using Blogy.DtoLayer.CategoryDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers   
