--- a/Blogy.WebUı/Areas/Admin/Views/AdminArticle/Index.cshtml
+++ b/Blogy.WebUı/Areas/Admin/Views/AdminArticle/Index.cshtml
@@ -14,7 +14,7 @@
 				<table class="table align-items-center table-dark table-flush">
 					<thead class="thead-dark">
 						<tr>
-							<th scope="col" class="sort" data-sort="name">ID</th>
+							<th scope="col" class="sort" data-sort="name">Id</th>
 							<th scope="col" class="sort" data-sort="budget">Başlık</th>
 							<th scope="col" class="sort" data-sort="status">Yayınlanma Tarih</th>
 							<th scope="col" class="sort" data-sort="status">Açıklama</th>
