--- a/Blogy.WebUı/Views/Shared/Components/_BlogListNavbarComponentPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_BlogListNavbarComponentPartial/Default.cshtml
@@ -19,8 +19,8 @@
 
 
 
-						<form asp-action="GetBlogSearchByName" method="get" class="search-form d-inline-block d-lg-none">
-							<input type="submit"   class="form-control" placeholder="Aranacak Kelime..." name="searchString"  value=" @ViewData["CurrentFilter"]" />
+						<form  method="#" class="search-form d-inline-block d-lg-none">
+							<input type="submit"   class="form-control" placeholder="Aranacak Kelime..." name="searchString"   />
 							<span class="bi-search"></span>
 						</form>
 
