--- a/Blogy.WebUı/Views/Shared/Components/_AdminLayoutSidebarPartial/Default.cshtml
+++ b/Blogy.WebUı/Views/Shared/Components/_AdminLayoutSidebarPartial/Default.cshtml
@@ -206,6 +206,14 @@
         </a>
     </li>
 
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="/Admin/Comment/Index/">
+            <span class="menu-icon">
+                <i class="mdi mdi-comments"></i>
+            </span>
+            <span class="menu-title">Yorumlar</span>
+        </a>
+    </li>
 
 
     <li class="nav-item menu-items">
